PLANET-5609 Use css grid for Covers grid layout
This is for all styles of the block: Take Action, Content and Campaign

--- a/assets/src/styles/blocks/Covers/layouts/CoversCarouselLayout.scss
+++ b/assets/src/styles/blocks/Covers/layouts/CoversCarouselLayout.scss
@@ -12,6 +12,10 @@
     scrollbar-width: none;
     scroll-behavior: smooth;
 
+    .cover {
+      margin-bottom: 24px;
+    }
+
     &::-webkit-scrollbar {
       display: none;
     }
