--- a/assets/src/styles/blocks/Covers/styles/CampaignCovers.scss
+++ b/assets/src/styles/blocks/Covers/styles/CampaignCovers.scss
@@ -56,55 +56,47 @@
 }
 
 .campaign-covers-block {
-  &.carousel-layout .covers-container {
-    .covers {
-      .cover {
-        min-width: 260px;
+  &.carousel-layout {
+    .cover {
+      min-width: 260px;
+
+      &:not(:last-child) {
+        margin-inline-end: $sp-2;
+      }
+
+      @include medium-and-up {
+        min-width: 276px;
 
         &:not(:last-child) {
-          margin-inline-end: 16px;
+          margin-inline-end: $sp-3;
         }
+      }
 
-        .thumbnail-large {
-          max-height: 240px;
-        }
+      @include large-and-up {
+        min-width: 296px;
+      }
 
-        @include medium-and-up {
-          min-width: 276px;
-
-          &:not(:last-child) {
-            margin-inline-end: 24px;
-          }
-        }
-
-        @include large-and-up {
-          min-width: 296px;
-        }
-
-        @include x-large-and-up {
-          min-width: 356px;
-        }
+      @include x-large-and-up {
+        min-width: 356px;
       }
     }
 
     .carousel-control-prev,
     .carousel-control-next {
-      top: 96px;
-    }
-
-    .carousel-indicators {
-      margin-top: 24px;
+      top: 71px;
     }
   }
 
-  &:not(.carousel-layout) .covers {
+  &.grid-layout .covers {
     @supports (display: grid) {
-      display: grid;
       grid-template-columns: 1fr;
-      grid-column-gap: $sp-1x;
-      grid-row-gap: $sp-1x;
 
       @include medium-and-up {
+        grid-column-gap: $sp-3;
+        grid-template-columns: repeat(2, 1fr);
+      }
+
+      @include large-and-up {
         grid-template-columns: repeat(3, 1fr);
       }
     }
@@ -112,16 +104,9 @@
 
   .covers {
     .thumbnail-large {
-      margin-bottom: 5px;
-      max-height: 70px;
       position: relative;
       overflow: hidden;
       @include background-before-opacity(rgba(22, 22, 22, 0.1));
-
-      @include medium-and-up {
-        margin-bottom: 0;
-        max-height: 100%;
-      }
 
       @include large-and-up {
         @include background-before-opacity(rgba(22, 22, 22, 0.65));
@@ -135,13 +120,8 @@
 
       img {
         width: 100%;
-        height: 260px;
-        margin: -50px 0 -10px 0;
+        height: 190px;
         object-fit: cover;
-
-        @include medium-and-up {
-          margin: 0;
-        }
       }
 
       .yellow-cta {
@@ -155,7 +135,7 @@
         bottom: 0;
         width: 100%;
         z-index: 2;
-        margin-bottom: 18px;
+        margin-bottom: $sp-2;
         text-shadow: 1px 1px $grey-80;
 
         @include medium-and-up {
@@ -173,10 +153,5 @@
         }
       }
     }
-  }
-
-  .load-more-btn {
-    display: block;
-    margin: 24px auto 0 auto;
   }
 }
