--- a/assets/src/styles/blocks/ENForm/components/_enform-full-width-bg.scss
+++ b/assets/src/styles/blocks/ENForm/components/_enform-full-width-bg.scss
@@ -34,11 +34,11 @@
 
     .title-and-description {
       h2 {
-        margin-bottom: $space-lg;
+        margin-bottom: $sp-4;
       }
 
       p {
-        margin-bottom: $space-lg;
+        margin-bottom: $sp-4;
       }
     }
 
