--- a/assets/src/styles/blocks/ENForm/components/_enform-full-width.scss
+++ b/assets/src/styles/blocks/ENForm/components/_enform-full-width.scss
@@ -5,7 +5,7 @@
 
   .enform {
     color: white;
-    padding: $space-lg;
+    padding: $sp-4;
     padding-bottom: 42px;
 
     .title-and-description {
