--- a/assets/src/styles/blocks/ENForm/components/_enform-side-style.scss
+++ b/assets/src/styles/blocks/ENForm/components/_enform-side-style.scss
@@ -83,11 +83,11 @@
       max-width: 444px;
       box-sizing: content-box;
       box-shadow: 0 2px 5px rgba(0, 0, 0, .25);
-      padding: $space-xl 30px 34px 30px;
+      padding: $sp-6 30px 34px;
     }
 
     .en__field--check {
-      margin-top: $space-md;
+      margin-top: $sp-2;
 
       .form-group {
         padding-top: 0;
@@ -108,7 +108,7 @@
 
   .title-and-description {
     color: $grey-80;
-    padding: $n15;
+    padding: $sp-2;
 
     @include large-and-up {
       padding: 0;
@@ -125,11 +125,11 @@
       }
 
       .progress-container {
-        margin-bottom: $space-md;
-        height: $space-sm;
+        margin-bottom: $sp-2;
+        height: $sp-1x;
 
         html[dir="rtl"] & {
-          margin-bottom: $space-lg;
+          margin-bottom: $sp-4;
         }
       }
 
@@ -143,7 +143,7 @@
     }
 
     .form-description {
-      margin-bottom: $space-lg;
+      margin-bottom: $sp-4;
 
       html[dir="rtl"] & {
         font-size: 0.75rem;
@@ -153,7 +153,7 @@
 
   .form-container {
     background: $white;
-    padding: $n15;
+    padding: $sp-2;
 
     @include large-and-up {
       padding: 0;
@@ -194,14 +194,14 @@
     position: absolute;
     top: -.6rem;
     background: white;
-    left: $n10;
+    left: $sp-1;
     padding: 0 8px;
     font-weight: 600;
     font-size: .75rem;
 
     html[dir="rtl"] & {
       left: auto;
-      right: $n10;
+      right: $sp-1;
     }
   }
 }
