--- a/assets/src/styles/blocks/Gallery/styles/GalleryGrid.scss
+++ b/assets/src/styles/blocks/Gallery/styles/GalleryGrid.scss
@@ -31,8 +31,8 @@
     .grid-row {
       display: grid;
       grid-template-columns: repeat(2, 1fr);
-      grid-column-gap: $space-sm;
-      grid-row-gap: $space-sm;
+      grid-column-gap: $sp-1x;
+      grid-row-gap: $sp-1x;
 
       @include medium-and-up {
         grid-template-columns: repeat(3, 1fr);
