--- a/assets/src/styles/blocks/Happypoint.scss
+++ b/assets/src/styles/blocks/Happypoint.scss
@@ -164,7 +164,7 @@
     margin-top: 0;
     margin-bottom: 16px;
     width: 100%;
-    padding: $n10;
+    padding: $sp-1;
     border: 1px solid transparent;
 
     &:hover {
