--- a/assets/src/styles/blocks/core-overrides/Image.scss
+++ b/assets/src/styles/blocks/core-overrides/Image.scss
@@ -2,16 +2,16 @@
   position: relative;
   width: auto;
   max-width: 100%;
-  margin-top: $space-xs;
-  margin-bottom: $space-md;
+  margin-top: $sp-1;
+  margin-bottom: $sp-2;
 
   &:not(.force-no-lightbox) {
     cursor: pointer;
   }
 
   @include large-and-up {
-    margin-top: $space-md;
-    margin-bottom: $space-lg;
+    margin-top: $sp-2;
+    margin-bottom: $sp-4;
   }
 
   figure {
@@ -19,12 +19,12 @@
   }
 
   .alignleft {
-    margin: 0 $n10 $n10 0;
+    margin: 0 $sp-1 $sp-1 0;
     padding-top: 6px;
   }
 
   .alignright {
-    margin: 0 0 $n10 $n10;
+    margin: 0 0 $sp-1 $sp-1;
     padding-top: 6px;
   }
 
