--- a/assets/src/styles/components/HTMLSidebarHelp.scss
+++ b/assets/src/styles/components/HTMLSidebarHelp.scss
@@ -1,6 +1,6 @@
 .HTMLSidebarHelp {
-  padding-top: $space-xs;
-  padding-bottom: $space-md;
+  padding-top: $sp-1;
+  padding-bottom: $sp-2;
   font-size: 13px;
   line-height: 1.5;
 }
