--- a/assets/src/styles/blocks/Gallery/styles/GalleryCarousel.scss
+++ b/assets/src/styles/blocks/Gallery/styles/GalleryCarousel.scss
@@ -54,7 +54,7 @@
       top: 0;
       color: $white;
       font-size: $font-size-xxs;
-      margin: $n15;
+      margin: $sp-2;
       font-weight: normal;
     }
 
