--- a/assets/src/styles/blocks/SplitTwoColumns.scss
+++ b/assets/src/styles/blocks/SplitTwoColumns.scss
@@ -291,7 +291,7 @@
 
     a {
       display: block;
-      padding: 45px $n15;
+      padding: 45px $sp-2;
 
       &:after {
         content: "";
