--- a/assets/src/styles/blocks/core-overrides/Separator.scss
+++ b/assets/src/styles/blocks/core-overrides/Separator.scss
@@ -4,12 +4,12 @@
   border-bottom: 2px solid #8f98a1;
   margin-left: auto;
   margin-right: auto;
-  margin-top: $space-xs;
-  margin-bottom: $space-md;
+  margin-top: $sp-1;
+  margin-bottom: $sp-2;
 
   @include large-and-up {
-    margin-top: $space-md;
-    margin-bottom: $space-lg;
+    margin-top: $sp-2;
+    margin-bottom: $sp-4;
   }
 
   &:not(.is-style-wide):not(.is-style-dots) {
