--- a/assets/src/styles/components/Preview.scss
+++ b/assets/src/styles/components/Preview.scss
@@ -4,7 +4,7 @@
   .PreviewBar {
     border-bottom: 1px solid $gp-green-80;
     font-style: italic;
-    padding: $space-sm;
+    padding: $sp-1x;
   }
 
   // Unset social media embed float to make block render within the preview component.
