--- a/assets/src/styles/blocks/TakeActionBoxout/style.scss
+++ b/assets/src/styles/blocks/TakeActionBoxout/style.scss
@@ -1,12 +1,13 @@
 .boxout {
   background: white;
-  padding: 0;
+  padding: $sp-2;
   width: 100%;
-  height: 120px;
-  position: relative;
+  height: 128px;
+  display: flex;
   box-shadow: 0 1px 8px rgba(0, 0, 0, 0.16);
   transition: box-shadow 0.2s;
   border-radius: 4px;
+  position: relative;
 
   .cover-card-overlay {
     position: absolute;
@@ -33,28 +34,16 @@
   }
 
   img {
-    display: block;
-    width: 120px;
-    height: 120px;
-    padding: 16px;
+    width: 96px;
+    min-width: 96px;
+    height: 100%;
     pointer-events: none;
-    float: left;
     object-fit: cover;
-    border-top-left-radius: 4px;
-    border-bottom-left-radius: 4px;
-
-    html[dir="rtl"] & {
-      float: right;
-      border-top-right-radius: 4px;
-      border-bottom-right-radius: 4px;
-      border-top-left-radius: 0;
-      border-bottom-left-radius: 0;
-    }
   }
 
   .boxout-content {
-    position: unset;
-    padding: 16px;
+    padding: $sp-1;
+    flex: auto;
   }
 
   &::before,
@@ -65,10 +54,8 @@
   .boxout-heading {
     font-family: $roboto;
     color: $grey-80;
-    text-shadow: none;
     font-size: 16px;
     font-weight: 700;
-    max-width: 100%;
     line-height: 1.25;
     margin-bottom: 0;
     display: -webkit-box;
@@ -79,26 +66,24 @@
     /*! autoprefixer: on */
     /* stylelint-enable property-no-vendor-prefix */
     overflow: hidden;
+    word-break: break-word;
   }
 
   .btn {
     font-size: 12px;
     line-height: 1;
-    padding: 10px 16px;
-    right: 16px;
-    bottom: 16px;
-    left: auto;
-    position: absolute;
-    display: block;
-    width: auto;
-    margin: 0;
+    padding: $sp-1 $sp-2;
     background-color: $orange;
     color: $white;
     border: none;
+    white-space: nowrap;
+    position: absolute;
+    bottom: $sp-2;
+    right: $sp-2;
 
     html[dir="rtl"] & {
       right: auto;
-      left: 16px;
+      left: $sp-2;
     }
   }
 
@@ -107,28 +92,9 @@
   }
 
   @include medium-and-up {
-    min-height: 200px;
-    float: none;
-
-    html[dir="rtl"] & {
-      float: none;
-    }
-
     .boxout-heading {
-      margin-bottom: 10px;
+      margin-bottom: $sp-1;
       font-size: 20px;
-      margin-top: 0;
-    }
-
-    .boxout-content {
-      padding: 20px;
-    }
-
-    img {
-      height: 100%;
-      width: 45%;
-      padding: 0;
-      margin-inline-end: 16px;
     }
 
     .boxout-excerpt {
@@ -136,7 +102,7 @@
       line-height: 1.5;
       font-size: 14px;
       display: -webkit-box;
-      -webkit-line-clamp: 3;
+      -webkit-line-clamp: 1;
       /* stylelint-disable property-no-vendor-prefix */
       /*! autoprefixer: off */
       -webkit-box-orient: vertical;
@@ -148,11 +114,46 @@
 
     .btn {
       font-size: 14px;
+      align-self: flex-end;
+      position: unset;
     }
   }
 
   @include large-and-up {
-    min-height: 210px;
+    height: 210px;
+    padding: 0;
+
+    img {
+      min-width: 336px;
+      border-top-left-radius: 4px;
+      border-bottom-left-radius: 4px;
+
+      html[dir="rtl"] & {
+        border-top-left-radius: 0;
+        border-bottom-left-radius: 0;
+        border-top-right-radius: 4px;
+        border-bottom-right-radius: 4px;
+      }
+    }
+
+    .boxout-content {
+      padding: $sp-3;
+    }
+
+    .boxout-excerpt {
+      -webkit-line-clamp: 3;
+    }
+
+    .btn {
+      position: absolute;
+      right: $sp-3;
+      bottom: $sp-3;
+
+      html[dir="rtl"] & {
+        right: auto;
+        left: $sp-3;
+      }
+    }
   }
 }
 
@@ -168,7 +169,7 @@
     transition: all 0.5s;
 
     .boxout-heading {
-      margin-inline-end: 24px;
+      margin-inline-end: $sp-3;
     }
 
     .cover-card-overlay,
@@ -184,18 +185,18 @@
       position: absolute;
       width: 16px;
       height: 16px;
-      top: 16px;
-      right: 16px;
+      top: $sp-2;
+      right: $sp-2;
 
       html[dir="rtl"] & {
         right: auto;
-        left: 16px;
+        left: $sp-2;
       }
     }
 
     @include medium-and-up {
       .boxout-content {
-        padding-top: 16px;
+        padding-top: $sp-2;
       }
 
       .boxout-heading {
