Country Selector: Remove white space from button
Adjusted the markup to avoid a white space being rendered on both sides
of the text. It makes the code slightly less readable, but we avoid
having the underline decoration overflow on hover.

To compensate for the loss of the white space, added a bit more margin
to the two icons.

--- a/templates/footer_country_selector.twig
+++ b/templates/footer_country_selector.twig
@@ -8,10 +8,7 @@
 			aria-label="{{ data_nav_bar.country_dropdown_toggle }}"
 			data-ga-category="Menu Navigation"
 			data-ga-action="Open Country Selector"
-			data-ga-label="{{ page_category }}">
-				<span class="visually-hidden">{{ __( 'Selected', 'planet4-master-theme' ) }}:</span> {{ website_navbar_title }}
-				<span class="visually-hidden">{{ __( 'Change Country', 'planet4-master-theme' ) }}</span>
-		</button>
+			data-ga-label="{{ page_category }}"><span class="visually-hidden">{{ __( 'Selected', 'planet4-master-theme' ) }}:</span>{{ website_navbar_title }}<span class="visually-hidden">{{ __( 'Change Country', 'planet4-master-theme' ) }}</span></button>
 	</div>
 </div>
 <div class="countries-list">
