--- a/assets/src/scss/layout/_country-selector.scss
+++ b/assets/src/scss/layout/_country-selector.scss
@@ -74,14 +74,14 @@
 
   &::before {
     height: 20px;
-    margin-inline-end: 8px;
+    margin-inline-end: $sp-1x;
     mask: url("../../images/gp-g-logo.png") 0 0/16px 20px no-repeat;
     vertical-align: middle;
   }
 
   &::after {
     height: 12px;
-    margin-inline-start: 8px;
+    margin-inline-start: $sp-1x;
     mask: url("../../images/chevron.svg") 0 0/16px 12px no-repeat;
     transform: rotate(0.25turn);
     transition: transform 300ms cubic-bezier(.86, 0, .07, 1);
