--- a/assets/src/scss/layout/_navbar.scss
+++ b/assets/src/scss/layout/_navbar.scss
@@ -80,33 +80,6 @@ $navbar-default-height: 60px;
   }
 }
 
-.site-logo {
-  flex-grow: 1;
-  line-height: $menu-height;
-  padding: 0;
-  position: unset;
-  text-align: center;
-
-  img {
-    height: 26px;
-  }
-
-  @include large-and-up {
-    flex-grow: 0;
-    margin-inline-start: calc((100vw - 960px) / 2);
-    text-align: start;
-    width: auto;
-  }
-
-  @include x-large-and-up {
-    margin-inline-start: calc((100vw - 1140px) / 2);
-  }
-
-  @include xx-large-and-up {
-    margin-inline-start: calc((100vw - 1320px) / 2);
-  }
-}
-
 #nav-main {
   display: flex;
 
@@ -225,91 +198,6 @@ a.nav-link --nav-link-- {
   text-underline-position: var(--nav-link--hover--text-underline-position, auto);
 }
 
-.nav-search-form {
-  background-color: var(--body--background-color, $white);
-  border: none;
-  border-top: 1px solid #c4c4c4;
-  box-shadow: 0 2px 4px transparentize($black, 0.85);
-  display: none;
-  height: 56px;
-  inset-inline-start: 0;
-  position: fixed;
-  top: $menu-height;
-  z-index: 3;
-  width: 100%;
-
-  .admin-bar & {
-    top: calc(#{$menu-height} + 46px);
-
-    @media (min-width: 783px) {
-      top: calc(#{$menu-height} + 32px);
-    }
-  }
-
-  &.open {
-    display: flex;
-
-    @include medium-and-less {
-      #nav-main.open & {
-        display: none;
-      }
-    }
-  }
-
-  @include x-large-and-up {
-    background: var(--top-navigation--background, inherit);
-    border-inline-start: var(--top-navigation--separation, 1px solid transparentize($white, 0.5));
-    border-top: none;
-    box-shadow: none;
-    display: inline-block;
-    height: 100%;
-    inset-inline-end: auto;
-    min-width: 25%;
-    padding: 0 16px;
-    position: unset;
-    width: auto;
-
-    &.open {
-      display: inline-block;
-    }
-  }
-}
-
-#search_input {
-  background: transparent;
-  border: none;
-  border-radius: unset;
-  box-shadow: none;
-  color: var(--top-navigation--color, $grey-80);
-  display: inline-block;
-  flex-grow: 1;
-  font-size: $font-base-size;
-  line-height: $menu-height;
-  padding-inline: 12px 8px;
-  width: auto;
-
-  @include x-large-and-up {
-    color: inherit;
-    width: calc(100% - 48px);
-  }
-}
-
-#search_input:placeholder-shown ~ button.nav-search-clear {
-  visibility: hidden;
-}
-
-#search_input::-webkit-search-decoration,
-#search_input::-webkit-search-cancel-button,
-#search_input::-webkit-search-results-button,
-#search_input::-webkit-search-results-decoration {
-  display: none;
-}
-// Hack to hide the input:-internal-autofill-selected style from webkit
-#search_input:-webkit-autofill,
-#search_input:-webkit-autofill:focus {
-  transition: background-color 600000s 0s, color 600000s 0s;
-}
-
 .nav-menu-toggle {
   background: transparent;
   border: none;
@@ -342,258 +230,9 @@ a.nav-link --nav-link-- {
   }
 }
 
-.nav-search-btn {
-  background: transparent;
-  border: none;
-  display: none;
-  float: left;
-  padding: 0;
-
-  html[dir="rtl"] & {
-    float: right;
-  }
-
-  @include x-large-and-up {
-    display: inline-block;
-    line-height: $menu-height;
-  }
-}
-
-.nav-search-clear {
-  background-color: $black;
-  border: none;
-  float: right;
-  height: 56px;
-  margin-inline-end: 36px;
-  mask: url("../../images/cross-circle.svg") 50% 50%/24px 24px no-repeat;
-  width: 24px;
-
-  html[dir="rtl"] & {
-    float: left;
-  }
-
-  @include x-large-and-up {
-    background-color: var(--top-navigation--color, $white);
-    display: inline-block;
-    height: $menu-height;
-    margin-inline-end: 0;
-  }
-}
-
-.nav-search-toggle-container {
-  display: none;
-  height: $menu-height;
-  padding: 12px;
-
-  &.medium-and-less {
-    display: inline-block;
-    @include large-and-up {
-      display: none;
-    }
-  }
-
-  @include large-and-up {
-    display: inline-block;
-    border-inline-start: var(--top-navigation--separation, 1px solid transparentize($white, 0.5));
-  }
-
-  @include x-large-and-up {
-    display: none;
-  }
-}
-
-.nav-search-toggle {
-  background: transparent;
-  border: none;
-  border-radius: 4px;
-  height: 44px;
-  width: 44px;
-
-  @include medium-and-less {
-    opacity: 0.5;
-  }
-
-  &.open --top-navigation--search-toggle-- {
-    background: rgba(255, 255, 255, 0.15);
-  }
-}
-
-.nav-languages-toggle {
-  background: transparent;
-  border: none;
-  color: inherit;
-  display: none;
-  font-size: $font-base-size;
-  font-weight: 700;
-  padding: 0 20px;
-
-  @include large-and-up {
-    border-inline-start: var(--top-navigation--separation, 1px solid transparentize($white, 0.5));
-    display: inline-block;
-    line-height: $menu-height;
-  }
-
-  &::after {
-    background-color: var(--top-navigation--color, $white);
-    background-repeat: no-repeat;
-    content: "";
-    display: inline-block;
-    height: 8px;
-    margin-inline-start: 4px;
-    mask: url("../../images/chevron.svg") 0 0/8px 8px;
-    transform: rotate(90deg);
-    transition: transform 100ms linear;
-    width: 8px;
-  }
-
-  &[aria-expanded="true"]::after {
-    transform: rotate(-90deg);
-  }
-}
-
-.nav-languages {
-  display: none;
-  background: var(--top-navigation--background, $dark-blue);
-  box-shadow: none;
-  position: unset;
-  width: 100%;
-  z-index: 4;
-
-  a.nav-link {
-    padding: 0;
-    width: auto;
-  }
-
-  ul {
-    border-bottom: var(--top-navigation--separation, 1px solid transparentize($white, 0.5));
-    display: inline-block;
-    flex-grow: 1;
-    margin-block: 0;
-    margin-inline: 40px;
-    padding-bottom: 36px;
-    padding-top: 40px;
-    padding-inline: 0;
-    width: 100%;
-  }
-
-  li {
-    display: inline-block;
-    font-weight: 700;
-    margin: 0;
-    padding: 0;
-    opacity: 0.6;
-  }
-
-  .current-language {
-    opacity: 1;
-  }
-
-  .current-language::after {
-    background: none;
-    mask: none;
-  }
-
-  li > span[aria-hidden="true"] {
-    opacity: 1;
-  }
-
-  li:last-of-type > span[aria-hidden="true"] {
-    display: none;
-  }
-
-  @include medium-and-less {
-    display: flex;
-  }
-
-  @include medium-and-up {
-    width: 400px;
-  }
-
-  @include large-and-up {
-    background: var(--top-navigation--background, $white);
-    border-radius: 4px;
-    box-shadow: 0 1px 4px transparentize($black, 0.88);
-    inset-inline-end: 8px;
-    min-width: 140px;
-    position: absolute;
-    text-align: start;
-    top: $menu-height + 8px;
-    width: unset;
-    z-index: 3;
-
-    &.open {
-      display: block;
-    }
-
-    ul {
-      border: 0;
-      list-style: none;
-      margin: 0;
-      padding: 16px 0;
-    }
-
-    li {
-      display: block;
-      font-size: 16px;
-      font-weight: 400;
-      line-height: 48px;
-      margin: 0;
-      opacity: 1;
-      padding-block: 0;
-      //padding-inline: 16px 12px;
-    }
-
-    li:hover {
-      background: rgba(216, 216, 216, 0.4);
-    }
-
-    li > span[aria-hidden="true"] {
-      display: none;
-    }
-
-    a.nav-link {
-      color: $grey-80;
-      display: inline-block;
-      padding-inline: 16px 12px;
-      text-decoration: none;
-      width: 100%;
-    }
-
-    a.nav-link:hover {
-      text-decoration: none;
-    }
-
-    .current-language a::after {
-      background-color: $grey-80;
-      content: "";
-      display: inline-block;
-      float: right;
-      height: 48px;
-      mask: url("../../images/checkmark.svg") 50% 50%/16px 12px no-repeat;
-      width: 16px;
-
-      html[dir="rtl"] & {
-        float: left;
-      }
-    }
-  }
-}
-
 .navigation-bar_min {
   --top-navigation-min-- {
     height: $min-height;
-  }
-
-  .site-logo {
-    line-height: $min-height;
-
-    img {
-      height: 18px;
-    }
-
-    @include large-and-up {
-      margin-inline-start: 36px;
-    }
   }
 }
 
@@ -618,3 +257,8 @@ a.nav-link --nav-link-- {
     width: 100%;
   }
 }
+
+// I'll include these at the end for now because they depend on CSS order.
+@import "navbar/site-logo";
+@import "navbar/languages";
+@import "navbar/search";
