PLANET-6482 Fix Accordion block button width in the editor
Because the CSS code was not specific enough, the width attribute for the button was overriden, resulting in a really ugly input

--- a/assets/src/styles/blocks/Accordion/AccordionEditorStyle.scss
+++ b/assets/src/styles/blocks/Accordion/AccordionEditorStyle.scss
@@ -29,7 +29,7 @@
   }
 }
 
-.accordion-content .button-container {
+.accordion-block .accordion-content .button-container {
   position: relative;
   width: 80%;
 
