--- a/assets/src/styles/blocks.scss
+++ b/assets/src/styles/blocks.scss
@@ -9,6 +9,7 @@
 @import "blocks/SplitTwoColumns";
 @import "blocks/Submenu";
 @import "blocks/Cookies";
+@import "blocks/ShareButtons/ShareButtonsStyles";
 
 @import "blocks/TakeActionBoxout/style";
 
