Make display, width, and padding not variables
Ref: https://jira.greenpeace.org/browse/PLANET-6256

* We can make these variables again later once we know how to support
spacing changes. It's significantly more challenging to support and not
needed for current theme use cases.

--- a/assets/src/scss/layout/_navbar.scss
+++ b/assets/src/scss/layout/_navbar.scss
@@ -175,17 +175,20 @@ $navbar-default-height: 60px;
   }
 }
 
-a.nav-link --nav-link-- {
+a.nav-link {
+  --nav-link-- {
+    color: $white;
+
+    &:hover {
+      color: $white;
+      text-decoration: underline;
+      text-underline-position: auto;
+    }
+  }
+
   display: inline-block;
-  color: $white;
   padding: 16px 0;
   width: 100%;
-
-  &:hover {
-    color: $white;
-    text-decoration: underline;
-    text-underline-position: auto;
-  }
 
   @include large-and-up {
     padding: 0 20px;
