Remove enhanced donate button on new navbar, fix search toggle
In Planet 4 > Donate button we can set a fixed position for the donate button
This situation doesn't exist in the new navbar so we're hiding the fixed button
We will remove the option after the transition

Search field is not hidden when user clicks somewhere else on the page
This comes from a double click generated by the closeInactiveMenus function

--- a/assets/src/scss/layout/_navbar.scss
+++ b/assets/src/scss/layout/_navbar.scss
@@ -261,6 +261,10 @@ a.nav-link {
   }
 }
 
+.btn-donate-top {
+  display: none;
+}
+
 // I'll include these at the end for now because they depend on CSS order.
 @import "navbar/site-logo";
 @import "navbar/languages";
