Avoid performing calculations at runtime
* The previous form of the code let the front end perform calculations
which can just as well be done compile time. Since these variables are
used very frequently, this probably has a significant impact.

--- a/assets/src/scss/base/_variables.scss
+++ b/assets/src/scss/base/_variables.scss
@@ -12,7 +12,7 @@ $extra-extra-large-width: 1600px;
 
 // Spacing
 @function space($base) {
-  @return calc(#{$base} * 8px);
+  @return $base * 8px;
 }
 $sp-x: space(0.5);
 $sp-1: space(1);
