Perform calculation at develop time
* 4 - 2 === 2, if I'm not mistaken.

--- a/assets/src/styles/blocks/Columns.scss
+++ b/assets/src/styles/blocks/Columns.scss
@@ -309,7 +309,7 @@
         }
 
         .card-block {
-          padding: calc(#{$sp-4} - #{$sp-2}) $sp-3x $sp-4;
+          padding: $sp-2 $sp-3x $sp-4;
           border-bottom: none;
 
           p {
