--- a/assets/src/scss/layout/_navbar.scss
+++ b/assets/src/scss/layout/_navbar.scss
@@ -14,10 +14,10 @@ $navbar-default-height: 60px;
     font-family: $roboto;
     font-size: $font-base-size;
     height: $menu-height;
+    position: fixed;
   }
 
   display: flex;
-  position: fixed;
   top: 0;
   width: 100%;
   z-index: 4;
@@ -57,6 +57,7 @@ $navbar-default-height: 60px;
       box-shadow: none;
       color: $white;
       font-size: inherit;
+      height: 44px;
       min-width: 116px;
 
       &:hover {
@@ -67,8 +68,8 @@ $navbar-default-height: 60px;
       }
     }
 
-    height: 44px;
-    line-height: 40px;
+    line-height: calc(var(--top-navigation--btn-donate--height, 44px) - 4px);
+    text-align: center;
   }
 
   .nav-donate {
