Also add lite YouTube player on 2nd oembed filter
Ref: https://jira.greenpeace.org/browse/PLANET-6538

* The Media block uses another way to get the embed HTML which doesn't
use the filter we added for WP's embed block. As a result it was still
using the default YT player which completely cripples page load
performance.

--- a/assets/src/scss/editorStyle.scss
+++ b/assets/src/scss/editorStyle.scss
@@ -3,6 +3,7 @@
 @import "~bootstrap/scss/carousel";
 @import "~bootstrap/scss/tooltip";
 @import "~bootstrap/scss/buttons";
+@import "~lite-youtube-embed";
 
 @import "base/variables";
 @import "base/colors";
