--- a/assets/src/scss/pages/search/_search-results.scss
+++ b/assets/src/scss/pages/search/_search-results.scss
@@ -30,25 +30,20 @@
       position: relative;
       align-items: flex-start;
 
-      .search-result-item-image,
-      .blank-block {
+      .search-result-item-image {
         width: 0;
         margin-right: 0;
         visibility: hidden;
 
+        img {
+          width: 100%;
+        }
+
         @include small-and-up {
           width: 25%;
           min-width: 25%;
-          margin: 0 32px 0 0;
+          margin-inline-end: 32px;
           visibility: visible;
-
-          html[dir="rtl"] & {
-            margin: 0 0 0 32px;
-          }
-        }
-
-        &:hover {
-          cursor: pointer;
         }
       }
 
