--- a/templates/tease-search.twig
+++ b/templates/tease-search.twig
@@ -1,10 +1,12 @@
 {% set ga_page_type = post.post_type|capitalize %}
+{% set post_link = post.link %}
 {% if ( 'action' == post.content_type ) %}
 	{% set is_action = true %}
 	{% set ga_page_type = 'Take Action' %}
 {% elseif ( 'document' == post.content_type ) %}
 	{% set is_document = true %}
 	{% set ga_page_type = 'Document' %}
+	{% set post_link = fn('wp_get_attachment_url', post.id) %}
 {% elseif ( 'campaign' == post.content_type ) %}
 	{% set is_campaign = true %}
 {% elseif ( 'archive' == post.post_type ) %}
@@ -18,14 +20,17 @@
 {% endif %}
 		<li id="result-row-{{ post.ID }}" class="d-flex search-result-list-item">
 
-		<img
-			class="d-flex search-result-item-image"
-			src="{{ post.thumbnail ?: dummy_thumbnail }}"
-			loading="lazy"
-			alt="{{ fn('esc_attr', post.thumbnail_alt|default( post.post_title ) )|raw }}"
-			data-ga-category="Search Results"
-			data-ga-action="Image"
-			data-ga-label="{{ ga_page_type }}" />
+			<a
+				class="d-flex search-result-item-image"
+				href="{{ post_link }}"
+				data-ga-category="Search Results"
+				data-ga-action="Image"
+				data-ga-label="{{ ga_page_type }}">
+				<img
+					src="{{ post.thumbnail ?: dummy_thumbnail }}"
+					loading="lazy"
+					alt="{{ fn('esc_attr', post.thumbnail_alt|default( post.post_title ) )|raw }}" />
+			</a>
 
 		<div id="tease-{{ post.ID }}" class="search-result-item-body tease tease-{{ post.post_type }}">
 			<div class="search-result-item-flex-title">
@@ -77,7 +82,7 @@
 					{% if ( is_document ) %}
 						{% set title = post.post_title|e('wp_kses_post') %}
 						<a
-							href="{{ fn('wp_get_attachment_url', post.id) }}"
+							href="{{ post_link }}"
 							class="search-result-item-headline"
 							data-ga-category="Search Results"
 							data-ga-action="Title"
@@ -86,7 +91,7 @@
 						</a>
 					{% elseif ( is_archive ) %}
 						<a
-							href="{{ post.link }}"
+							href="{{ post_link }}"
 							target="_blank"
 							class="search-result-item-headline archive"
 							data-ga-category="Search Results"
@@ -96,7 +101,7 @@
 						</a>
 					{% else %}
 						<a
-							href="{{ post.link }}"
+							href="{{ post_link }}"
 							class="search-result-item-headline"
 							data-ga-category="Search Results"
 							data-ga-action="Title"
@@ -113,7 +118,7 @@
 				</div>
 				<div>
 					{% if ( is_document ) %}
-						<a href="{{ fn('wp_get_attachment_url', post.id) }}" download class="btn btn-small btn-secondary">
+						<a href="{{ post_link }}" download class="btn btn-small btn-secondary">
 							{{ __( 'Download', 'planet4-master-theme' ) }}
 						</a>
 					{% elseif ( is_campaign or is_archive ) %}
@@ -138,7 +143,7 @@
 			<div>
 				{%  set link_text = settings['take_action_covers_button_text'] %}
 				<a
-					href="{{ post.link }}"
+					href="{{ post_link }}"
 					class="btn btn-primary btn-small"
 					data-ga-category="Search Results"
 					data-ga-action="Call to Action"
