PLANET-6522: Remove option for enhanced Donate button
- Remove planet4 option
- Remove js script
- Remove mentions in code and templates

--- a/templates/navigation-bar.twig
+++ b/templates/navigation-bar.twig
@@ -78,7 +78,7 @@
 			{% endfor %}
 			<li class="nav-item donate-nav-item">
 				<a
-					class="btn btn-donate {{ enhanced_donate_btn_class }}"
+					class="btn btn-donate"
 					href="{{ donatelink }}"
 					data-ga-category="Menu Navigation"
 					data-ga-action="Donate"
