--- a/templates/navigation-bar-new.twig
+++ b/templates/navigation-bar-new.twig
@@ -40,7 +40,7 @@
 				{% endfor %}
 				<li class="nav-item nav-donate">
 					<a
-						class="btn btn-donate {{ enhanced_donate_btn_class }}"
+						class="btn btn-donate"
 						href="{{ donatelink }}"
 						data-ga-category="Menu Navigation"
 						data-ga-action="Donate"
