--- a/assets/src/scss/layout/_navbar.scss
+++ b/assets/src/scss/layout/_navbar.scss
@@ -272,3 +272,4 @@ a.nav-link {
 @import "navbar/site-logo";
 @import "navbar/languages";
 @import "navbar/search";
+@import "navbar/country-selector-banner";
